Don't retrieve roles from keycloak for every user